k8s/provision/deployment/standard/app/50-services.yml
apiVersion: v1
kind: Service
metadata:
  name: database-nodeport
  namespace: demo
  labels:
    environment: demo
    app.kubernetes.io/name: bank-account-demo
    app.kubernetes.io/component: database
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432         
      targetPort: 5432    
      nodePort: 30000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: demo
  labels:
    environment: demo
    app.kubernetes.io/name: bank-account-demo
    app.kubernetes.io/component: ingress  
spec:
  ingressClassName: nginx
  rules:
    - host: app.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 80
---
